Implementación de la gestión de llamadas a funciones y listas de expresiones en el árbol de sintaxis abstracta. Se añaden funciones para liberar recursos y se actualiza la gramática de Bison para soportar estas nuevas estructuras. Se mejora la semántica de las expresiones y se añaden nuevos tipos de expresiones.
Co-authored-by: Federico Viera <VieraFederico@users.noreply.github.com>
Co-authored-by: Ramiro Garcia <RamiroGarciaAr@users.noreply.github.com>

--- a/vscode-syntax-extension/arcana-syntax/package.json
+++ b/vscode-syntax-extension/arcana-syntax/package.json
@@ -30,6 +30,11 @@
         "scopeName": "source.arcana",
         "path": "./syntaxes/arcana.tmLanguage.json"
       }
-    ]
+    ],
+    "icons": {
+      "arcx": {
+        "path": "./assets/arcx.ico"
+      }
+    }
   }
 }
